--- a/demo/src/main/resources/static/casos/consultar-casos.html
+++ b/demo/src/main/resources/static/casos/consultar-casos.html
@@ -61,7 +61,11 @@
             Volver
         </button>
     </div>
-
+    <div class="footer">
+        <br>
+        <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
+        <p><strong>Universidad de Morón.</strong></p>
+    </div>
     <script src="consultar-casos.js"></script>
 </body>
 
