--- a/demo/src/main/resources/static/dataset/exportar.html
+++ b/demo/src/main/resources/static/dataset/exportar.html
@@ -34,12 +34,17 @@
         </div>
     </div>
     
-    <div class="btn-custom-container">
-        <button class="btn-back" id="back" onclick="volver()">
+    <div class="d-flex" style="justify-content: space-between; max-width: 300px; margin: 0 auto;">
+        <button class="btn-back" id="back" onclick="volver()" >
             Volver
         </button>
     </div>
 
+    <div class="footer">
+        <br>
+        <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
+        <p><strong>Universidad de Morón.</strong></p>
+    </div>
     <script src="exportar.js"></script>
 </body>
 
