--- a/demo/src/main/resources/static/detalle/detalle.html
+++ b/demo/src/main/resources/static/detalle/detalle.html
@@ -95,7 +95,11 @@
             </div>
         </div>
     </div>
-
+    <div class="footer">
+        <br>
+        <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
+        <p><strong>Universidad de Morón.</strong></p>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="detalle.js"></script>
