algunos arreglos visuales

--- a/demo/src/main/resources/static/casos/consultar-casos.html
+++ b/demo/src/main/resources/static/casos/consultar-casos.html
@@ -56,7 +56,7 @@
         </table>
     </div>
 
-    <div class="btn-custom-container">
+    <div class="btn-custom-container" style="margin-bottom: 50px;">
         <button class="btn-back" id="volver" onclick="volver()">
             Volver
         </button>
