--- a/demo/src/main/resources/static/dataset/exportar.html
+++ b/demo/src/main/resources/static/dataset/exportar.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     
-    <div class="d-flex" style="justify-content: space-between; max-width: 300px; margin: 0 auto;">
+    <div class="d-flex" style="justify-content: space-between; max-width: 300px; margin: 0 auto; margin-bottom: 50px;">
         <button class="btn-back" id="back" onclick="volver()" >
             Volver
         </button>
