--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -16,7 +16,7 @@
     </div>
     <div class="container" id="formulario" style="overflow-x: hidden;">
         <div class="row data-columns">
-            <h2>Datos del Paciente</h2>
+            <h2 style="color: #009587">Datos del Paciente</h2>
             <div class="col-md-6">
                 <div class="gray-box">
                     <div class="form-group margin-filas">
