--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -14,7 +14,13 @@
     <div class="col-md-12">
         <div class="gray-box">
             <div class="button-container opciones">
-                <h6 for="sustancias">Bajo sustancias o efectos médicos</h6>
+                <h6 for="sustancias">Bajo sustancias o efectos médicos
+                    <div class="tooltip-container">
+                        <i class="fas fa-info-circle icon-tooltip"></i>
+                        <span class="tooltip">Los sintomas no se puede atribuir a los efectos fisiológicos de una
+                            sustancia (p. ej., una droga o medicamento).</span>
+                    </div>
+                </h6>
                 <div class="btn-group">
                     <button id="sustancias-si" class="btn btn-choice">Sí</button>
                     <button id="sustancias-no" class="btn btn-choice">No</button>
@@ -23,7 +29,13 @@
             </div>
 
             <div class="button-container opciones">
-                <h6 for="estudios">Estudios</h6>
+                <h6 for="estudios">Estudios
+                    <div class="tooltip-container">
+                        <i class="fas fa-info-circle icon-tooltip"></i>
+                        <span class="tooltip">Estudios que descarten causas orgánicas que puedan estar provocando los
+                            síntomas en el paciente.</span>
+                    </div>
+                </h6>
                 <div class="btn-group">
                     <button id="estudios-si" class="btn btn-choice">Sí</button>
                     <button id="estudios-no" class="btn btn-choice">No</button>
