--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -1,120 +1,138 @@
-<h3>Síntomas Negativos</h3>
-<div class="col-md-12">
-  <div class="gray-box">
+<!DOCTYPE html>
+<html lang="en">
 
-    <div id="sintomas-negativos-duracion-id" class="form-group margin-filas">
-      <h6 for="sintomas-negativos-duracion"><b>Duración de los síntomas negativos</b></h6>
-      <!-- <input type="number" class="form-control" id="negativos-duracion" name="negativos-duracion"
-                placeholder="Ingrese la duración"> -->
-      <select class="form-control" id="sintomas-negativos-duracion" name="sintomas-negativos-duracion" required>
-        <option value="sintomas-negativos-duracion-menor">Menos de un mes</option>
-        <option value="sintomas-negativos-duracion-mayor">Mayor o igual a un mes</option>
-        <option value="-1" selected>Seleccioná una opción</option>
-      </select>
-    </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../index.css">
+  <link rel="stylesheet" href="formulario.css">
+</head>
 
-    <div id="negativo-tipo-aspecto" class="form-group margin-filas">
-      <h6><b>Aspecto</b></h6>
-      <div id="aspecto" class="checkboxes">
-        <div class="form-control">
-          <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-facie" />Facie</label>
-          <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-alinio" />Aliño</label>
-          <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-aseo" />Aseo</label>
-          <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-bizarro" />Bizarro</label>
-          <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-extravagante" />Extravagante</label>
-          <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-inadecuado" />Inadecuado</label>
-          <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-adelgazado" />Adelgazado</label>
-          <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-hipomimico" />Hipomímico</label>
+<body>
+  <h3 style="color: #009587">Síntomas Negativos</h3>
+  <div class="col-md-12">
+    <div class="gray-box">
+      <div id="sintomas-negativos-duracion-id" class="form-group margin-filas">
+        <h6 for="sintomas-negativos-duracion">Duración de los síntomas negativos</h6>
+        <select class="form-control" id="sintomas-negativos-duracion" name="sintomas-negativos-duracion" required>
+          <option value="sintomas-negativos-duracion-menor">Menos de un mes</option>
+          <option value="sintomas-negativos-duracion-mayor">Mayor o igual a un mes</option>
+          <option value="-1" selected>Seleccioná una opción</option>
+        </select>
+      </div>
+
+      <div id="negativo-tipo-aspecto" class="form-group margin-filas">
+        <h6>Aspecto</h6>
+        <div id="aspecto" class="checkboxes">
+          <div class="form-control">
+            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-facie" />Facie</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-alinio" />Aliño</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-aseo" />Aseo</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-bizarro" />Bizarro</label>
+            <label id="check"><input type="checkbox" name="aspecto[]"
+                value="aspecto-extravagante" />Extravagante</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-inadecuado" />Inadecuado</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-adelgazado" />Adelgazado</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-hipomimico" />Hipomímico</label>
+          </div>
         </div>
       </div>
-    </div>
 
+      <div id="negativo-tipo-atencion" class="form-group margin-filas">
+        <h6 for="negativo-negativo-tipo-atencion">Atención</h6>
+        <select class="form-control" id="atencion" name="atencion" required>
+          <option value="atencion-euprosexia">Euprosexia</option>
+          <option value="atencion-hipoprosexia">Hipoprosexia</option>
+          <option value="atencion-hiperprosexia">Hiperprosexia</option>
+          <option value="atencion-paraprosexia">Paraprosexia</option>
+          <option value="-1" selected>Seleccioná una opción</option>
+        </select>
+      </div>
 
+      <div id="negativo-tipo-actividad" class="form-group margin-filas">
+        <h6 for="negativo-tipo-actividad">Actividad</h6>
+        <select class="form-control" id="actividad" name="actividad" required>
+          <option value="actividad-normobulico">Normobúlico</option>
+          <option value="actividad-abulia">Abulia</option>
+          <option value="actividad-hipobulia">Hipobulia</option>
+          <option value="actividad-hiperbulia-productiva">Hiperbulia productiva</option>
+          <option value="actividad-hiperbulia-improductiva">Hiperbulia improductiva</option>
+          <option value="actividad-impulsiones">Impulsiones</option>
+          <option value="actividad-compulsiones">Compulsiones</option>
+          <option value="actividad-apraxia">Apraxia</option>
+          <option value="actividad-ataxia">Ataxia</option>
+          <option value="actividad-ecopraxia">Ecopraxia</option>
+          <option value="actividad-manierismo">Manierismo</option>
+          <option value="actividad-estereotipia-motora">Estereotipia Motora</option>
+          <option value="actividad-interceptacion-cinetica">Interceptación cinética</option>
+          <option value="actividad-negativismo">Negativismo</option>
+          <option value="actividad-obediencia-automatica">Obediencia automática</option>
+          <option value="actividad-flexibilidad-cerea">Flexibilidad cérea</option>
+          <option value="-1" selected>Seleccioná una opción</option>
+        </select>
+      </div>
 
-    <div id="negativo-tipo-atencion" class="form-group margin-filas">
-      <h6 for="negativo-negativo-tipo-atencion"><b>Atención</b></h6>
-      <select class="form-control" id="atencion" name="atencion" required>
-        <option value="atencion-euprosexia">Euprosexia</option>
-        <option value="atencion-hipoprosexia">Hipoprosexia</option>
-        <option value="atencion-hiperprosexia">Hiperprosexia</option>
-        <option value="atencion-paraprosexia">Paraprosexia</option>
-        <option value="-1" selected>Seleccioná una opción</option>
-      </select>
-    </div>
-
-    <div id="negativo-tipo-actividad" class="form-group margin-filas">
-      <h6 for="negativo-tipo-actividad"><b>Actividad</b></h6>
-      <select class="form-control" id="actividad" name="actividad" required>
-        <option value="actividad-normobulico">Normobúlico</option>
-        <option value="actividad-abulia">Abulia</option>
-        <option value="actividad-hipobulia">Hipobulia</option>
-        <option value="actividad-hiperbulia-productiva">Hiperbulia productiva</option>
-        <option value="actividad-hiperbulia-improductiva">Hiperbulia improductiva</option>
-        <option value="actividad-impulsiones">Impulsiones</option>
-        <option value="actividad-compulsiones">Compulsiones</option>
-        <option value="actividad-apraxia">Apraxia</option>
-        <option value="actividad-ataxia">Ataxia</option>
-        <option value="actividad-ecopraxia">Ecopraxia</option>
-        <option value="actividad-manierismo">Manierismo</option>
-        <option value="actividad-estereotipia-motora">Estereotipia Motora</option>
-        <option value="actividad-interceptacion-cinetica">Interceptación cinética</option>
-        <option value="actividad-negativismo">Negativismo</option>
-        <option value="actividad-obediencia-automatica">Obediencia automática</option>
-        <option value="actividad-flexibilidad-cerea">Flexibilidad cérea</option>
-        <option value="-1" selected>Seleccioná una opción</option>
-      </select>
-    </div>
-
-    <div id="negativo-tipo-afectividad" class="form-group margin-filas">
-      <h6><b>Afectividad</b></h6>
-      <div id="afectividad" class="checkboxes">
-        <div class="form-control">
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-eutimia"
-              onclick="unselect(value, name)" />Eutimia</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-timia-displacentera"
-              onclick="unselectUnicos('afectividad-eutimia,afectividad-hipertimia-placentera,afectividad-hipertimia-displacentera', name)" />Timia
-            displacentera</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-hipertimia-placentera"
-              onclick="unselectUnicos('afectividad-eutimia,afectividad-timia-displacentera,afectividad-hipertimia-displacentera', name)" />Hipertimia
-            placentera</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-hipertimia-displacentera"
-              onclick="unselectUnicos('afectividad-eutimia,afectividad-timia-displacentera,afectividad-hipertimia-placentera', name)" />Hipertimia
-            displacentera</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-hipotimia"
-              onclick="unselectUnicos('afectividad-eutimia', name)" />Hipotimia</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-aplanamiento-afectivo"
-              onclick="unselectUnicos('afectividad-eutimia', name)" />Aplanamiento afectivo</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-labilidad"
-              onclick="unselectUnicos('afectividad-eutimia', name)" />Labilidad</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-irritabilidad"
-              onclick="unselectUnicos('afectividad-eutimia', name)" />Irritabilidad</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-expansivo"
-              onclick="unselectUnicos('afectividad-eutimia', name)" />Expansivo</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-inapropiado"
-              onclick="unselectUnicos('afectividad-eutimia', name)" />Inapropiado</label>
-          <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-anhedonia"
-              onclick="unselectUnicos('afectividad-eutimia', name)" />Anhedonia</label>
+      <div id="negativo-tipo-afectividad" class="form-group margin-filas">
+        <h6>Afectividad</h6>
+        <div id="afectividad" class="checkboxes">
+          <div class="form-control">
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-eutimia"
+                onclick="unselect(value, name)" />Eutimia</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-timia-displacentera"
+                onclick="unselectUnicos('afectividad-eutimia,afectividad-hipertimia-placentera,afectividad-hipertimia-displacentera', name)" />Timia
+              displacentera</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-hipertimia-placentera"
+                onclick="unselectUnicos('afectividad-eutimia,afectividad-timia-displacentera,afectividad-hipertimia-displacentera', name)" />Hipertimia
+              placentera</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-hipertimia-displacentera"
+                onclick="unselectUnicos('afectividad-eutimia,afectividad-timia-displacentera,afectividad-hipertimia-placentera', name)" />Hipertimia
+              displacentera</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-hipotimia"
+                onclick="unselectUnicos('afectividad-eutimia', name)" />Hipotimia</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-aplanamiento-afectivo"
+                onclick="unselectUnicos('afectividad-eutimia', name)" />Aplanamiento afectivo</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-labilidad"
+                onclick="unselectUnicos('afectividad-eutimia', name)" />Labilidad</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-irritabilidad"
+                onclick="unselectUnicos('afectividad-eutimia', name)" />Irritabilidad</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-expansivo"
+                onclick="unselectUnicos('afectividad-eutimia', name)" />Expansivo</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-inapropiado"
+                onclick="unselectUnicos('afectividad-eutimia', name)" />Inapropiado</label>
+            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-anhedonia"
+                onclick="unselectUnicos('afectividad-eutimia', name)" />Anhedonia</label>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="button-container opciones">
-      <h6 for="bajo-funcionamiento"><b>Bajo Funcionamiento en Ámbitos Principales</b></h6>
-      <div class="btn-group">
-        <button id="bajo-funcionamiento-si" class="btn btn-choice">Sí</button>
-        <button id="bajo-funcionamiento-no" class="btn btn-choice">No</button>
+      <div class="button-container opciones">
+        <h6 for="bajo-funcionamiento">Bajo funcionamiento en ámbitos principales
+          <div class="tooltip-container">
+            <i class="fas fa-info-circle icon-tooltip"></i>
+            <span class="tooltip">Indica si hay bajo funcionamiento en áreas principales como el trabajo, las relaciones
+              interpersonales o el cuidado personal.</span>
+          </div>
+        </h6>
+        <div class="btn-group">
+          <button id="bajo-funcionamiento-si" class="btn btn-choice">Sí</button>
+          <button id="bajo-funcionamiento-no" class="btn btn-choice">No</button>
+        </div>
+        <div id="error-bajo-funcionamiento" class="error-message-text"></div>
       </div>
-      <div id="error-bajo-funcionamiento" class="error-message-text"></div>
+
+      <div id="bajo-funcionamiento-comentario" class="margin-filas" style="display: none;">
+        <h6 for="bajo-funcionamiento-comentario">Comentario sobre los ámbitos principales</h6>
+        <textarea id="bajo-funcionamiento-comentario" class="form-control" rows="3"
+          placeholder="Comentarios sobre el bajo funcionamiento en los ámbitos principales"></textarea>
+      </div>
+
     </div>
-
-    <div id="bajo-funcionamiento-comentario" class="margin-filas" style="display: none;">
-      <h6 for="bajo-funcionamiento-comentario">Comentario sobre los ámbitos principales</h6>
-      <textarea id="bajo-funcionamiento-comentario" class="form-control" rows="3"
-        placeholder="Comentarios sobre el bajo funcionamiento en los ámbitos principales"></textarea>
-    </div>
-
-
   </div>
 
-</div>
-</div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+
+</html>
