cambio POSIBLE ESQUIZOFRENIA por ESQUIZOFRENIA en todos lados

--- a/demo/src/main/resources/static/detalle/detalleDiagnostico.html
+++ b/demo/src/main/resources/static/detalle/detalleDiagnostico.html
@@ -14,8 +14,8 @@
     <div class="col-md-12">
         <div class="gray-box">
             <div class="diagnostico-container">
-                <h3 id="diagnostico-esquizofrenia" class="no-show-seccion posible-esquizofrenia">
-                    <strong>Esquizofrenia Posible</strong>
+                <h3 id="diagnostico-esquizofrenia" class="no-show-seccion esquizofrenia">
+                    <strong>Esquizofrenia</strong>
                 </h3>
                 <h3 id="diagnostico-esquizofrenia-temporal" class="no-show-seccion evaluar-temporal">
                     <strong>Evaluar esquizofrenia temporal</strong>
