--- a/demo/src/main/resources/static/formulario/diagnostico.html
+++ b/demo/src/main/resources/static/formulario/diagnostico.html
@@ -10,13 +10,13 @@
         <div id="diagnostico-container" style="margin-top: 3%;">
             <h3>Diagnóstico para <span id="nombre-paciente"></span>:</h3>
             <div class="diagnostico-texto">
-                <h3 id="posible-esquizofrenia" class="posibilidad-seccion posible-esquizofrenia">
-                    <strong>Esquizofrenia Posible</strong>
+                <h3 id="esquizofrenia" class="diagnostico-seccion esquizofrenia">
+                    <strong>Esquizofrenia</strong>
                 </h3>
-                <h3 id="evaluar-temporal" class="posibilidad-seccion evaluar-temporal">
+                <h3 id="evaluar-temporal" class="diagnostico-seccion evaluar-temporal">
                     <strong>Evaluar esquizofrenia temporal</strong>
                 </h3>
-                <h3 id="no-posible-esquizofrenia" class="posibilidad-seccion no-posible-esquizofrenia">
+                <h3 id="no-posible-esquizofrenia" class="diagnostico-seccion no-posible-esquizofrenia">
                     <strong>Esquizofrenia no posible</strong>
                 </h3>
             </div>
