--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -76,7 +76,7 @@
         <h6>Afectividad</h6>
         <div id="afectividad" class="checkboxes">
           <div class="form-control">
-            <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-eutimia"
+            <label id="check" ><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"><input type="checkbox" name="afectividad[]" value="afectividad-eutimia"
                 onclick="unselect(value, name)" />Eutimia</label>
             <label id="check"><input type="checkbox" name="afectividad[]" value="afectividad-timia-displacentera"
                 onclick="unselectUnicos('afectividad-eutimia,afectividad-hipertimia-placentera,afectividad-hipertimia-displacentera', name)" />Timia
