agrego icono en snackbar

--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -18,7 +18,7 @@
                     <div class="tooltip-container">
                         <i class="fas fa-info-circle icon-tooltip"></i>
                         <span class="tooltip">Los sintomas no se puede atribuir a los efectos fisiológicos de una
-                            sustancia (p. ej., una droga o medicamento).</span>
+                            sustancia (p. ej. una droga o medicamento) o a otra afección médica.</span>
                     </div>
                 </h6>
                 <div class="btn-group">
