--- a/demo/src/main/resources/static/formulario/diagnostico.html
+++ b/demo/src/main/resources/static/formulario/diagnostico.html
@@ -93,7 +93,10 @@
                 </div>
             </div>
         </div>
-        <div id="snackbar"></div>
+        <div id="snackbar">
+            <i class="fas fa-check-circle" style="margin-right: 10px;"></i>
+            <span id="snackbar-text">Paciente ingresado con éxito</span>
+        </div>
     </div>
 </div>
 <!-- End Popup -->
