agrego asteriscos en campos obligatorios

--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -13,7 +13,7 @@
   <div class="col-md-12">
     <div class="gray-box">
       <div id="sintomas-negativos-duracion-id" class="form-group margin-filas">
-        <h6 for="sintomas-negativos-duracion">Duración de los síntomas negativos</h6>
+        <h6 for="sintomas-negativos-duracion">Duración de los síntomas negativos *</h6>
         <select class="form-control" id="sintomas-negativos-duracion" name="sintomas-negativos-duracion" required>
           <option value="sintomas-negativos-duracion-menor">Menos de un mes</option>
           <option value="sintomas-negativos-duracion-mayor">Mayor o igual a un mes</option>
@@ -22,7 +22,7 @@
       </div>
 
       <div id="negativo-tipo-aspecto" class="form-group margin-filas">
-        <h6>Aspecto</h6>
+        <h6>Aspecto *</h6>
         <div id="aspecto" class="checkboxes">
           <div class="form-control">
             <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-facie" />Facie</label>
@@ -39,7 +39,7 @@
       </div>
 
       <div id="negativo-tipo-atencion" class="form-group margin-filas">
-        <h6 for="negativo-negativo-tipo-atencion">Atención</h6>
+        <h6 for="negativo-negativo-tipo-atencion">Atención *</h6>
         <select class="form-control" id="atencion" name="atencion" required>
           <option value="atencion-euprosexia">Euprosexia</option>
           <option value="atencion-hipoprosexia">Hipoprosexia</option>
@@ -50,7 +50,7 @@
       </div>
 
       <div id="negativo-tipo-actividad" class="form-group margin-filas">
-        <h6 for="negativo-tipo-actividad">Actividad</h6>
+        <h6 for="negativo-tipo-actividad">Actividad *</h6>
         <select class="form-control" id="actividad" name="actividad" required>
           <option value="actividad-normobulico">Normobúlico</option>
           <option value="actividad-abulia">Abulia</option>
@@ -73,7 +73,7 @@
       </div>
 
       <div id="negativo-tipo-afectividad" class="form-group margin-filas">
-        <h6>Afectividad</h6>
+        <h6>Afectividad *</h6>
         <div id="afectividad" class="checkboxes">
           <div class="form-control">
             <label id="check" ><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"><input type="checkbox" name="afectividad[]" value="afectividad-eutimia"
@@ -106,7 +106,7 @@
       </div>
 
       <div class="button-container opciones">
-        <h6 for="bajo-funcionamiento">Bajo funcionamiento en ámbitos principales
+        <h6 for="bajo-funcionamiento">Bajo funcionamiento en ámbitos principales *
           <div class="tooltip-container">
             <i class="fas fa-info-circle icon-tooltip"></i>
             <span class="tooltip">Indica si hay bajo funcionamiento en áreas principales como el trabajo, las relaciones
