--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -14,7 +14,7 @@
     <div class="col-md-12">
         <div class="gray-box">
             <div class="button-container opciones">
-                <h6 for="sustancias">Bajo sustancias o efectos médicos
+                <h6 for="sustancias">Bajo sustancias o efectos médicos *
                     <div class="tooltip-container">
                         <i class="fas fa-info-circle icon-tooltip"></i>
                         <span class="tooltip">Los sintomas no se puede atribuir a los efectos fisiológicos de una
@@ -29,7 +29,7 @@
             </div>
 
             <div class="button-container opciones">
-                <h6 for="estudios">Estudios
+                <h6 for="estudios">Estudios *
                     <div class="tooltip-container">
                         <i class="fas fa-info-circle icon-tooltip"></i>
                         <span class="tooltip">Estudios que descarten causas orgánicas que puedan estar provocando los
@@ -43,7 +43,7 @@
                 <div id="error-estudios" class="error-message-text"></div>
 
                 <div id="estudio-causa-natural-id" class="form-group margin-filas" style="display: none;">
-                    <h6 for="estudio-causa-natural">¿Se pueden atribuir los síntomas a una causa orgánica?</h6>
+                    <h6 for="estudio-causa-natural">¿Se pueden atribuir los síntomas a una causa orgánica? *</h6>
                     <select class="form-control" id="estudio-causa-natural-opcion" name="estudio-causa-natural-opcion">
                         <option value="estudio-causa-natural-si">Sí</option>
                         <option value="estudio-causa-natural-no">No</option>
