--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -20,17 +20,17 @@
             <div class="col-md-6">
                 <div class="gray-box">
                     <div class="form-group margin-filas">
-                        <label for="nombre">Nombre</label>
+                        <label for="nombre">Nombre *</label>
                         <input type="text" class="form-control" id="nombre" name="nombre"
                             placeholder="Ingrese el nombre del paciente" required>
                     </div>
                     <div class="form-group margin-filas">
-                        <label for="edad">Edad</label>
+                        <label for="edad">Edad *</label>
                         <input type="number" class="form-control" id="edad" name="edad"
                             placeholder="Ingrese la edad del paciente" min="1" max="120" required>
                     </div>
                     <div class="form-group margin-filas">
-                        <label for="sexo">Sexo</label>
+                        <label for="sexo">Sexo *</label>
                         <select class="form-control" id="sexo" name="sexo" required>
                             <option value="Femenino">Femenino</option>
                             <option value="Masculino">Masculino</option>
@@ -43,7 +43,7 @@
 
             <div class="col-md-3 btn-bool">
                 <div class="form-group margin-filas opciones">
-                    <h6 for="trastorno-autista">Trastorno del Espectro Autista</h6>
+                    <h6 for="trastorno-autista">Trastorno del Espectro Autista *</h6>
                     <div class="btn-group">
                         <button id="trastorno-autista-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-autista-no" class="btn btn-choice mb-2">No</button>
@@ -51,7 +51,7 @@
                     <div id="error-trastorno-autista" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
-                    <h6 for="trastorno-comunicacion">Trastorno de la Comunicación en la Infancia</h6>
+                    <h6 for="trastorno-comunicacion">Trastorno de la Comunicación en la Infancia *</h6>
                     <div class="btn-group">
                         <button id="trastorno-comunicacion-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-comunicacion-no" class="btn btn-choice mb-2">No</button>
@@ -59,7 +59,7 @@
                     <div id="error-trastorno-comunicacion" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
-                    <h6 for="trastorno-esquizoafectivo">Trastorno Esquizoafectivo</h6>
+                    <h6 for="trastorno-esquizoafectivo">Trastorno Esquizoafectivo *</h6>
                     <div class="btn-group">
                         <button id="trastorno-esquizoafectivo-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-esquizoafectivo-no" class="btn btn-choice mb-2">No</button>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-md-3 btn-bool">
                 <div class="form-group margin-filas opciones">
-                    <h6 for="trastorno-depresivo">Trastorno Depresivo</h6>
+                    <h6 for="trastorno-depresivo">Trastorno Depresivo *</h6>
                     <div class="btn-group">
                         <button id="trastorno-depresivo-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-depresivo-no" class="btn btn-choice mb-2">No</button>
@@ -77,7 +77,7 @@
                     <div id="error-trastorno-depresivo" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
-                    <h6 for="trastorno-bipolar">Trastorno Bipolar con Características Psicóticas</h6>
+                    <h6 for="trastorno-bipolar">Trastorno Bipolar con Características Psicóticas *</h6>
                     <div class="btn-group">
                         <button id="trastorno-bipolar-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-bipolar-no" class="btn btn-choice mb-2">No</button>
@@ -85,7 +85,7 @@
                     <div id="error-trastorno-bipolar" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
-                    <h6 for="antecedentes-familiares">Antecedentes Familiares Psiquiátricos</h6>
+                    <h6 for="antecedentes-familiares">Antecedentes Familiares Psiquiátricos *</h6>
                     <div class="btn-group">
                         <button id="antecedentes-familiares-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="antecedentes-familiares-no" class="btn btn-choice mb-2">No</button>
