--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -14,7 +14,7 @@
     <div class="col-md-12">
         <div class="gray-box">
             <div class="button-container opciones">
-                <h6 for="sustancias">Bajo sustancias o efectos médicos
+                <h6 for="sustancias">Bajo sustancias u otra afección médica
                     <div class="tooltip-container">
                         <i class="fas fa-info-circle icon-tooltip"></i>
                         <span class="tooltip">Los sintomas no se puede atribuir a los efectos fisiológicos de una
