Arreglo caja de comentarios Bajo funcionamiento y cambio Alucinaciones

--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -39,15 +39,15 @@
               <h6>Alucinaciones *</h6>
               <div  id="alucinaciones" class="checkboxes" >
                 <div class="form-control">
-                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="alucinaciones-auditivas-simples" onclick="unselectUnicos('alucinaciones-auditivas-complejas', name)"/>Auditivas Simples</label>
-                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="alucinaciones-auditivas-complejas"  onclick="unselectUnicos('alucinaciones-auditivas-simples', name)"/>Auditivas Complejas</label>
-                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="alucinaciones-visuales" />Visuales</label>
-                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="alucinaciones-olfativas"/>Olfativas</label>
-                  <label id="check"><input type="checkbox" name="alucinaciones[]"value="alucinaciones-gustativas"/>Gustativas</label>
-                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="alucinaciones-cenestesicas" />Cenestésicas</label>
-                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="alucinaciones-quinestesicas">Quinestésicas</label>
-                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="alucinaciones-extracampinas"/>Extracampinas</label>
-                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="alucinaciones-intrapsiquicas"/>Intrapsiquicas</label>
+                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="auditivas-simples" onclick="unselectUnicos('auditivas-complejas', name)"/>Auditivas Simples</label>
+                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="auditivas-complejas"  onclick="unselectUnicos('auditivas-simples', name)"/>Auditivas Complejas</label>
+                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="visuales" />Visuales</label>
+                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="olfativas"/>Olfativas</label>
+                  <label id="check"><input type="checkbox" name="alucinaciones[]"value="gustativas"/>Gustativas</label>
+                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="cenestesicas" />Cenestésicas</label>
+                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="quinestesicas">Quinestésicas</label>
+                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="extracampinas"/>Extracampinas</label>
+                  <label id="check"><input type="checkbox" name="alucinaciones[]" value="intrapsiquicas"/>Intrapsiquicas</label>
                 </div>
               </div>
             </div>
