Cambio de nombres - POSITIVOS

--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -58,21 +58,21 @@
               <h6>Lenguaje *</h6>
               <div  id="lenguaje" class="checkboxes">
                 <div class="form-control">
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-taquilalia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Taquilalia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-verborragia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Verborragia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-bradilalia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Bradilalia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]"value="lenguaje-latencia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Latencia de respuesta</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-mutismo" onclick="unselect(value, name)"/>Mutismo</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-musitaciones" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Musitaciones</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-soliloquio" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Soliloquio</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-neologismo" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Neologismo</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-jergafasia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Jergafasia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-ecolalia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Ecolalia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-pararrespuesta" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Pararrespuesta</label>
-                  <label id="check"><input type="checkbox"  name="lenguaje[]" value="lenguaje-estereotipia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Estereotipia verbal</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-verbigeracion" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Verbigeracion</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-homofonia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Asociación por homofonía</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="taquilalia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Taquilalia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="verborragia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Verborragia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="bradilalia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Bradilalia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]"value="latencia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Latencia de respuesta</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="mutismo" onclick="unselect(value, name)"/>Mutismo</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="musitaciones" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Musitaciones</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="soliloquio" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Soliloquio</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="neologismo" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Neologismo</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="jergafasia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Jergafasia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="ecolalia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Ecolalia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="pararrespuesta" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Pararrespuesta</label>
+                  <label id="check"><input type="checkbox"  name="lenguaje[]" value="estereotipia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Estereotipia verbal</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="verbigeracion" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Verbigeracion</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="homofonia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Asociación por homofonía</label>
                 </div>
               </div>
             </div>
@@ -81,16 +81,16 @@
               <h6>Pensamiento *</h6>
               <div  id="pensamiento" class="checkboxes">
                 <div class="form-control">
-                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
-                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-tangencial" onclick="unselectUnicos('pensamiento-sin-particularidades', name)"/>Tangencial</label>
-                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-circunstancial" onclick="unselectUnicos('pensamiento-sin-particularidades', name)"/>Circunstancial</label>
-                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-meticulosidad" onclick="unselectUnicos('pensamiento-sin-particularidades', name)"/>Meticulosidad</label>
-                  <label id="check"><input type="checkbox" name="pensamiento[]"value="pensamiento-viscosidad" onclick="unselectUnicos('pensamiento-sin-particularidades', name)"/>Viscosidad</label>
-                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-concreto" onclick="unselectUnicos('pensamiento-sin-particularidades', name)"/>Pensamiento concreto</label>
-                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-idea-fija" onclick="unselectUnicos('pensamiento-sin-particularidades', name)"/>Idea fija</label>
-                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-interceptacion-pensamiento" onclick="unselectUnicos('pensamiento-sin-particularidades', name)"/>Interceptación del pensamiento</label>
-                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-disgregacion" onclick="unselectUnicos('pensamiento-sin-particularidades', name)"/>Disgregación</label>
-                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-incoherencia" onclick="unselectUnicos('pensamiento-sin-particularidades', name)"/>Incoherencia</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="tangencial" onclick="unselectUnicos('sin-particularidades', name)"/>Tangencial</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="circunstancial" onclick="unselectUnicos('sin-particularidades', name)"/>Circunstancial</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="meticulosidad" onclick="unselectUnicos('sin-particularidades', name)"/>Meticulosidad</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]"value="viscosidad" onclick="unselectUnicos('sin-particularidades', name)"/>Viscosidad</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="concreto" onclick="unselectUnicos('sin-particularidades', name)"/>Pensamiento concreto</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="idea-fija" onclick="unselectUnicos('sin-particularidades', name)"/>Idea fija</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="interceptacion-del-pensamiento" onclick="unselectUnicos('sin-particularidades', name)"/>Interceptación del pensamiento</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="disgregacion" onclick="unselectUnicos('sin-particularidades', name)"/>Disgregación</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="incoherencia" onclick="unselectUnicos('sin-particularidades', name)"/>Incoherencia</label>
                 </div>
               </div>
             </div>
@@ -98,9 +98,9 @@
             <div id="tipo-ritmo-pensamiento-id" class="form-group margin-filas">
                 <h6 for="tipo-ritmo-pensamiento">Ritmo del pensamiento *</h6>
                 <select class="form-control" id="ritmo-pensamiento" name="ritmo-pensamiento" required>
-                    <option value="ritmo-pensamiento-sin-particularidades">Sin particularidades</option>
-                    <option value="ritmo-pensamiento-bradipsiquia">Bradipsiquia</option>
-                    <option value="ritmo-pensamiento-taquipsiquia">Taquipsiquia</option>
+                    <option value="sin-particularidades">Sin particularidades</option>
+                    <option value="bradipsiquia">Bradipsiquia</option>
+                    <option value="taquipsiquia">Taquipsiquia</option>
                     <option value="-1" selected>Seleccioná una opción</option>
                 </select>
             </div>
@@ -109,15 +109,15 @@
               <h6>Contenido del pensamiento *</h6>
               <div  id="contenido-pensamiento" class="checkboxes">
                 <div class="form-control">
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-idea-obsesiva" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Idea obsesiva</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-idea-fija" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Idea fija</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-ideacion-delirante-sistematizada" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades,contenido-pensamiento-ideacion-delirante-no-sistematizada', name)"/>Ideación delirante
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="idea-obsesiva" onclick="unselectUnicos('sin-particularidades', name)"/>Idea obsesiva</label>
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="idea-fija" onclick="unselectUnicos('sin-particularidades', name)"/>Idea fija</label>
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="ideacion-delirante-sistematizada" onclick="unselectUnicos('sin-particularidades,ideacion-delirante-no-sist', name)"/>Ideación delirante
                     sistematizada</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]"value="contenido-pensamiento-ideacion-delirante-no-sistematizada" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades,contenido-pensamiento-ideacion-delirante-sistematizada', name)"/>Ideación delirante no
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]"value="ideacion-delirante-no-sistematizada" onclick="unselectUnicos('sin-particularidades,ideacion-delirante-sist', name)"/>Ideación delirante no
                     sistematizada</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-ideas-muerte" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideas de muerte</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-ideas-suicidas" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideas suicidas</label>
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="ideas-muerte" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideas de muerte</label>
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="ideas-suicidas" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideas suicidas</label>
                 </div>
               </div>
             </div>
